snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210922.132251-3.module.sha1
a90d14174c537d640d5b1993a9490f246d733d1e